fix: correct overflow behavior

--- a/src/styles/home/home.scss
+++ b/src/styles/home/home.scss
@@ -14,5 +14,6 @@
     max-width: 1920px;
     margin: auto;
     position: relative;
+    overflow-x: hidden;
   }
 }
